# napari-cellulus

./: LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: test_and_deploy.yml
src/napari_cellulus/: __init__.py  _sample_data.py  _widget.py  dataset.py  gui_helpers.py  load_sample_data.py  meta_data.py  model.py  napari.yaml  sample_data.py  widget.py
src/napari_cellulus/_tests/: test_reader.py  test_sample_data.py  test_samples.py  test_widget.py  test_writer.py
src/napari_cellulus/datasets/: meta_data.py  napari_dataset.py  napari_image_source.py
src/napari_cellulus/gp/nodes/: __init__.py  napari_image_source.py
src/napari_cellulus/widgets/: _widget.py  widget.py
