[metadata]
name = napari-cellulus
version = attr: napari_cellulus.__version__
description = A Napari plugin for Cellulus: Unsupervised Learning of Object-Centric Embeddings for Cell Instance Segmentation in Microscopy Images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/funkelab/napari-cellulus
author = William Patton, Manan Lalit
author_email = wllmpttn24@gmail.com, lalitm@janelia.hhmi.org
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/funkelab/napari-cellulus/issues
    Documentation = https://github.com/funkelab/napari-cellulus#README.md
    Source Code = https://github.com/funkelab/napari-cellulus
    User Support = https://github.com/funkelab/napari-cellulus/issues

[options]
packages = find:
install_requires =
    napari[all]
    pyqtgraph
    qtpy
    cellulus @ git+https://github.com/funkelab/cellulus
    pre-commit

python_requires = >=3.8

package_dir =
    = src
include_package_data = True
package_data={'':['napari-cellulus/sample_data/fluo_n2dl_hela.tif', 'napari-cellulus/sample_data/tissue_net_sample.npy'}

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cellulus = napari_cellulus:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
